--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #baseurl: ""
 #url: "http://localhost"
 
-baseurl: "/s2024"
-url: "https://cmu-ml4graph.github.io/"
+baseurl: "/f2024"
+url: "https://cmu-ml-graph-2024f.github.io/"
 
 # Build settings
 markdown: kramdown
