--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -169,7 +169,7 @@ schedule:
   - number: ""
     title: ""
     theme: <mark><b> Midterm Exam on Lectures 1-13 </b></mark>
-    kind: Midterm Exam
+    kind: Exam
     date: 2024-10-10T11:00
       - title: in the same classroom and time slot as a regular class
 
@@ -359,7 +359,7 @@ schedule:
   - number: ""
     title: ""
     theme: <mark><b> Final Exam on Lectures 14 - 25 </b></mark>
-    kind: Final Exam
+    kind: Exam
     date: 2024-12-05T11:00
     note:
       - title: in the same classroom and time slot as a regular class
