--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -26,8 +26,8 @@ instructors:
 
 teaching_assistants:
   - name: Shengyu Feng
-    profile_pic: /_images/site/zhiqing.jpeg
-    webpage: https://www.cs.cmu.edu/~zhiqings/
+    profile_pic: /_images/site/shengyu.jpg
+    webpage: https://shengyu-feng.github.io/
 #  - name: Zekai Li
 #    profile_pic: /_images/site/zekai.jpeg
 #    webpage: https://www.linkedin.com/in/zekaili22
