--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -11,7 +11,7 @@ exams: Open-book midterm and final exams, with a set of questions (about 10) and
 # Logistics
 course_semester: "Fall 2024"
 course_dept: LTI
-course_num: 11-741/11-641/11-441
+course_num: 11-741/11-441
 classes: Tuesdays and Thursdays 11:00am - 12:20pm
 room: HH B131
 office_hours: See <a href="https://piazza.com/cmu/spring2024/11441741/home">Piazza</a>
