--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -78,7 +78,7 @@ schedule:
         title: "Language Models are Few-Shot Learners"
 
   - number: 7
-    title: "Scalable Alignment of Large Language Models (Invited Lectured by  <a href='https://www.cs.cmu.edu/~zhiqings/' target='_blank'>Zhiqing Sun</a>)"
+    title: "Scalable Alignment of Large Language Models (Invited Lecture by  <a href='https://www.cs.cmu.edu/~zhiqings/' target='_blank'>Zhiqing Sun</a>)"
     theme: DL6
     kind: Guest Speaker
     date: 2024-09-17T11:00
@@ -317,7 +317,7 @@ schedule:
 
   - number: 23
 #    title: "Improving the Scalability of Graph Neural Networks (by Dr. Neil Shah at Snap Research)"
-    title: "Neural Network Solvers for Integer Linear Programming (guest lecture by Shengyu Feng)"
+    title: "Neural Network Solvers for Integer Linear Programming (Invited Lecture by Shengyu Feng)"
     theme: Graph 12
     kind: Guest Speaker
     date: 2024-11-21T11:00
