--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -343,8 +343,8 @@ schedule:
         title: "Do Transformers Really Perform Bad for Graph Representation?"
 
   - number: ""
-    title: Thanksgiving Break (No class)
-    theme: Thanksgiving Break (No class)
+    title: Thanksgiving Break (No Class)
+    theme: Thanksgiving Break (No Class)
     kind: No class
     date: 2024-11-28T11:00
 
