--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -15,6 +15,7 @@ course_num: 11-741/11-441
 classes: Tuesdays and Thursdays 11:00am - 12:20pm
 room: HH B131
 office_hours: See <a href="https://piazza.com/cmu/spring2024/11441741/home">Piazza</a>
+  - Shengyu: GHC 5th floor, Monday 2:00 pm to 3:00pm 
 schoolname: "Carnegie Mellon University"
 schoolurl: "https://www.cmu.edu/"
 
