--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -19,12 +19,12 @@ schoolname: "Carnegie Mellon University"
 schoolurl: "https://www.cmu.edu/"
 
 # Instructors
-instructors:
+Instructors:
   - name: Yiming Yang
     profile_pic: /_images/site/yiming.jpeg
     webpage: https://www.cs.cmu.edu/~./yiming/
 
-teaching_assistants:
+Teaching_assistants:
   - name: Shengyu Feng
     profile_pic: /_images/site/shengyu.jpg
     webpage: https://shengyu-feng.github.io/
@@ -33,8 +33,7 @@ teaching_assistants:
 #    profile_pic: /_images/site/zekai.jpeg
 #    webpage: https://www.linkedin.com/in/zekaili22
 
-# Homework
-homework:
+Homework (Programming Assignments) 
   - HW1. Implementing neural networks (CNN and RNN) for binary classification with word embedding on the Yelp review dataset and using software like TensorFlow or Keras.
   - HW2. Implementing soft-max logistic regression for multi-class classification of Yelp reviews, with the derivation of the gradients of the loss functions.
   - HW3. Implementing PageRank, Personalized PageRank and Query Sensitive PageRank methods for web-page popularity analysis and evaluating their retrieval performance on the CiteEval dataset.
