--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -10,7 +10,7 @@ exams:
   - Open-book midterm and final exams, with a set of questions (about 10) and a list of possible answers to choose from per question.  
   - Mid-term exam will cover the lecture contents in the 1st half of the semester, and the final exam will cover the lecture contents in the 2nd half. 
   - The exams will not focus on the contents of the HW assignments. 
-  - No make-up exam will be arranged. That is, for those who cannot come to the exams as pre-specified in the syllabus, they just lose the exam scores
+  - No make-up exam will be arranged. That is, for those who cannot come to the exams as pre-specified in the syllabus, they just lose the exam scores.
 
 # Logistics
 logistics:
