--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -48,9 +48,9 @@ homework:
 
 # Grading
 grading:
-  - We have merged the previous 11-741 (PhD level) and 11-641 (Master Level) sections into one (11-741, 12 units) for graduate students (PhD or Master without distinction). Undergraduate students should take the 11-441 section (9 units), which is the same as before.
-  - Graduate students (in 11-741) are required to do all the 5 homework (HW) assignments, and all the questions in the midterm and final exams.
-  - Undergraduate students (in 11-441) are required to do 4 out of the 5 HW assignments, by their own choices, and 70% of the exam questions (e.g., 7 out of the total of 10 questions), again by their own choices. If an undergraduate chooses to do more HW assignments, we will use the best-4 scores in the final HW grading. Similarly, if an undergraduate chooses to do more exam questions, we will use the scores of the 70% best answered questions in the Exam grading.
+  - This course is cross listed as 11-741 (12 units for graduate students) and 11-441 (9 units for undergraduate students), respectively.
+  - 11-741 students are required to do all the 5 homework assignments and answer all the questions in the midterm and final exams.
+  - •	11-441 students are required to do 4 out of the total of 5 homework assignments (by their own choices) and 70% of the exam questions (by their own choices). If an undergraduate chooses to do more homework assignments, we will use the best-4 scores in the final HW grading. Similarly, if an undergraduate chooses to do more exam questions, we will use the scores of the 70% best answered questions in the Exam grading.
   - The table below shows the grading policies explicitly.
 
 # Policies
