--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -50,7 +50,7 @@ homework:
 grading:
   - This course is cross listed as 11-741 (12 units for graduate students) and 11-441 (9 units for undergraduate students), respectively.
   - 11-741 students are required to do all the 5 homework assignments and answer all the questions in the midterm and final exams.
-  - •	11-441 students are required to do 4 out of the total of 5 homework assignments (by their own choices) and 70% of the exam questions (by their own choices). If an undergraduate chooses to do more homework assignments, we will use the best-4 scores in the final HW grading. Similarly, if an undergraduate chooses to do more exam questions, we will use the scores of the 70% best answered questions in the Exam grading.
+  - 11-441 students are required to do 4 out of the total of 5 homework assignments (by their own choices) and 70% of the exam questions (by their own choices). If an undergraduate chooses to do more homework assignments, we will use the best-4 scores in the final HW grading. Similarly, if an undergraduate chooses to do more exam questions, we will use the scores of the 70% best answered questions in the Exam grading.
   - The table below shows the grading policies explicitly.
 
 # Policies
