--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -63,7 +63,7 @@ gracedays:
   - There are 5 grace days for the homework submissions.
   - Grace days will be automatically and greedily applied when you submit a late homework.
   - 5 grace days are for ALL of your homework, NOT EACH INDIVIDUAL homework, so if you use 5 days for HW1, then you no longer have any grace days for later homeworks.
-  - For each individual homework, the code and report are submitted separately for autograding purposes. The penalty will be computed based on the submission time of which ever was submitted last. So if you submit the report before deadline but didn't submit your code on time, it is still considered late.
+  - For each individual homework, the code and report are submitted separately for autograding purposes. The penalty will be computed based on the submission time of which ever was submitted last. So, if you only submit the report before the deadline without your code, or vice versa, it is still counted as a late submission.
   - No penalty is applied if you use grace days.
   - Grace days cannot be applied to the last homework (i.e., HW5).
 
